# phyno_mycn

./: .gitignore  .gitignore.release  NOTICE  PUBLICATION.md  README.md  pyproject.toml  requirements.txt
experiments/: README.md  requirements-experiments.txt
experiments/_common/: paths.py
experiments/cell_level_stats/: mixed_effects_stats.py  slide_level_stats.py
experiments/gmm_responsibility/: compute_responsibilities.py
experiments/latent_space/: cell_latent_analysis.py
experiments/shap_analysis/: run_shap.py
experiments/survival_analysis/: 00_build_cohort.py  01_km_mycn.py  02_slide_embedding_survival.py  03_cell_feature_survival.py  04_km_gmm_components.py  05_screen_summary.py  _style.py
pheno_mycn/: __init__.py  __main__.py  cli.py  inference.py
pheno_mycn/configs/: DSMIL.yaml  TransMIL.yaml  pheno_mycn_k6.yaml
pheno_mycn/datasets/: __init__.py  camel_data.py  data_interface.py
pheno_mycn/losses/: __init__.py  factory.py
pheno_mycn/models/: CLAM_SB.py  MILNet.py  MILNet_multi.py  TransMIL.py  __init__.py  ad_loss.py  model_interface.py  utils.py
pheno_mycn/optimizers/: __init__.py  factory.py  lookahead.py  radam.py
pheno_mycn/utils/: __init__.py  utils.py
plug_and_play/: README.md  predict.py
plug_and_play/weights/: README.md  fold9_result.csv
scripts/: train.py  train.sh
visualization/: README.md  cell_level_maps.py  create_map.py  heatmap_config_camelyon.yaml  prototype_analysis.py  prototype_map.py
visualization/vis_utils/: heatmap_utils.py
visualization/wsi_core/: WholeSlideImage.py
